-webkit-flex-flow does not work with inherit/initial values https://bugs.webkit.org/show_bug.cgi?id=92709

Patch by Douglas Stockwell <dstockwell@chromium.org> on 2012-07-31
Reviewed by Ojan Vafai.

Source/WebCore:

Add a new handler for flex-flow and move flex to StyleBuilder to mirror the standard pattern for handling initial/inherit in shorthands.

Test: css3/flexbox/flex-flow-initial.html

* css/StyleBuilder.cpp:
(WebCore::StyleBuilder::StyleBuilder): Added handlers for flex and flex-flow.
* css/StyleResolver.cpp:
(WebCore::StyleResolver::collectMatchingRulesForList): Removed hand written logic for handling flex.

LayoutTests:

Test that flex-flow handles 'initial' as expected.

* css3/flexbox/flex-flow-initial-expected.txt: Added.
* css3/flexbox/flex-flow-initial.html: Added.

Canonical link: https://commits.webkit.org/110672@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@124297 268f45cc-cd09-0410-ab3c-d52691b4dbfc